add api and retrieve comments from api. set up delete and post functionality. adjust pre-existing code to use api to display comments

--- a/styles/bio.css
+++ b/styles/bio.css
@@ -623,4 +623,11 @@ ul, a, a:link, a:visited {
   display: flex;
   border-bottom: 2px solid #E1E1E1;
   margin: 16px;
+  align-items: flex-end;
+}
+
+.buttons {
+  width: 50px;
+  height: 20px;
+  margin: 16px;
 }/*# sourceMappingURL=bio.css.map */
