--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -576,6 +576,7 @@ ul,a,a:link, a:visited{
     
     
 }
+
 @include tablet{
     .getstarted-title{
         margin:36px;
@@ -688,9 +689,17 @@ ul,a,a:link, a:visited{
     display: flex;
     border-bottom:2px solid #E1E1E1;
     margin: 16px;
-    // padding: 16px;
-    // align-items: flex-start;
+    align-items: flex-end;
 }
+.buttons{
+    width:50px;
+    height: 20px;
+    margin: 16px;
+}
+.button-div{
+
+}
+
 // .comments{
 //     width: 100%;
 //     margin:16px;
