--- a/styles/bio.css
+++ b/styles/bio.css
@@ -627,7 +627,13 @@ ul, a, a:link, a:visited {
 }
 
 .buttons {
-  width: 50px;
-  height: 20px;
+  width: 100px;
+  height: 100%;
   margin: 16px;
+  padding: 11px;
+  background-color: #323232;
+  font-size: 14px;
+  font-family: "AvenirNext";
+  border-radius: 5px;
+  color: #FAFAFA;
 }/*# sourceMappingURL=bio.css.map */
