--- a/styles/bio.css
+++ b/styles/bio.css
@@ -47,7 +47,7 @@ ul, a, a:link, a:visited {
   width: 50%;
 }
 .navbar-list #bio, .navbar-list #shows:hover {
-  border-bottom: 5px solid #fff;
+  border-bottom: 0.3125rem solid #fff;
 }
 .navbar-list #bio .section-header, .navbar-list #shows:hover .section-header {
   color: #fff;
@@ -461,14 +461,14 @@ ul, a, a:link, a:visited {
   }
 }
 .input {
-  padding: 16px;
+  padding: 1rem;
   width: 90%;
   height: auto;
   font-size: "AvenirNext";
   height: auto;
-  border: 2px solid #AFAFAF;
+  border: 0.125rem solid #AFAFAF;
   background-color: #FAFAFA;
-  border-radius: 5px;
+  border-radius: 0.3125rem;
 }
 
 .input-button {
@@ -481,15 +481,15 @@ ul, a, a:link, a:visited {
 }
 
 .getstarted-title {
-  margin: 16px;
+  margin: 1rem;
   font-size: 24px;
   color: #323232;
 }
 
 .comment-form {
-  margin: 16px;
+  margin: 1rem;
   width: auto;
-  border-bottom: 2px solid #E1E1E1;
+  border-bottom: 0.125rem solid #E1E1E1;
 }
 
 .form-container {
@@ -506,7 +506,7 @@ ul, a, a:link, a:visited {
 }
 
 .comment-card {
-  padding: 0 16px;
+  padding: 0 1rem;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -515,24 +515,24 @@ ul, a, a:link, a:visited {
 .input-button {
   background-color: #323232;
   color: #E1E1E1;
-  border-radius: 6px;
+  border-radius: 0.375rem;
   border: 0px;
-  padding: 16px;
+  padding: 1rem;
   width: 95%;
   height: auto;
-  margin: 16px 0;
+  margin: 1rem 0;
 }
 
 @media (min-width: 768px) {
   .getstarted-title {
-    margin: 36px;
+    margin: 2.25rem;
     font-size: 60px;
     color: #323232;
   }
   .input-button {
     width: 25%;
     height: auto;
-    margin: 24px 36px 18px 69%;
+    margin: 1.5rem 2.25rem 1.125rem 69%;
   }
 }
 @media (min-width: 1280px) {
@@ -544,14 +544,14 @@ ul, a, a:link, a:visited {
     width: auto;
   }
   .input {
-    padding: 16px;
+    padding: 1rem;
     width: 100%;
   }
   .getstarted-title {
-    margin: 36px;
+    margin: 2.25rem;
   }
   .card {
-    margin: 0 36px;
+    margin: 0 2.25rem;
     display: flex;
     flex-direction: column;
   }
@@ -567,14 +567,14 @@ ul, a, a:link, a:visited {
     color: #AFAFAF;
   }
   .user-image {
-    width: 48px;
-    height: 48px;
+    width: 3rem;
+    height: 3rem;
     border-radius: 50%;
-    margin: 16px;
+    margin: 1rem;
   }
   .input-button {
     width: 25%;
-    margin: 24px 20% 18px 80%;
+    margin: 1.5rem 20% 1.125rem 80%;
   }
   .comments {
     margin: 0 25%;
@@ -590,22 +590,22 @@ ul, a, a:link, a:visited {
 .comment-form {
   display: flex;
   flex-direction: row;
-  margin: 16px;
+  margin: 1rem;
   width: 100%;
 }
 
 .user-image {
-  width: 36px;
-  height: 36px;
+  width: 2.25rem;
+  height: 2.25rem;
   border-radius: 50%;
-  margin: 16px;
+  margin: 1rem;
 }
 
 .comment-image {
-  width: 36px;
-  height: 36px;
+  width: 2.25rem;
+  height: 2.25rem;
   border-radius: 50%;
-  margin: 16px;
+  margin: 1rem;
   display: flex;
   align-self: start;
   flex-shrink: 0;
@@ -621,19 +621,19 @@ ul, a, a:link, a:visited {
 .extra-div {
   width: auto;
   display: flex;
-  border-bottom: 2px solid #E1E1E1;
-  margin: 16px;
+  border-bottom: 0.125rem solid #E1E1E1;
+  margin: 1rem;
   align-items: flex-end;
 }
 
 .buttons {
-  width: 100px;
+  width: 6.25rem;
   height: 100%;
-  margin: 16px;
-  padding: 11px;
+  margin: 1rem;
+  padding: 0.6875rem;
   background-color: #323232;
   font-size: 14px;
   font-family: "AvenirNext";
-  border-radius: 5px;
+  border-radius: 0.3125rem;
   color: #FAFAFA;
 }/*# sourceMappingURL=bio.css.map */
